--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-
 #localhost db
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ventas
 #spring.datasource.username=postgres
 #spring.datasource.password=user
 #spring.datasource.driver-class-name=org.postgresql.Driver
@@ -12,12 +11,10 @@
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 #internal
-spring.datasource.url=jdbc:postgresql://dpg-culj5gggph6c73ddegug-a/ventas_47c6
-spring.datasource.username=user
-spring.datasource.password=IgOqgeusgIGHub9k300pWP4zUgZwaBf7
+spring.datasource.url=jdbc:postgresql://dpg-cv82fdhu0jms73c7lsg0-a/postgresdb_uist
+spring.datasource.username=postgresdb_uist_user
+spring.datasource.password=VxbP5iJLLWS1caBQDvBtXcFOvzWUXJRK
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-
 
 
 #timeout max. 60 sec
